# AoC2022Cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  entry.cpp  expected_answers.txt
inputs/: test1.txt
src/: readFile.h  result.h  test.h
src/Utils/: numbers.h
src/days/: day1.h  day10.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h
